<resources>
    <string name="app_name">Medicine application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="order_medicines">Order Medicines</string>
    <string name="book_lab_test">Book a Lab Test</string>
    <string name="book_appointment">Book an Appointment</string>
    <string name="under_construction">Under Construction</string>
    <string name="get_alternative">Get Alternate Products</string>
</resources>